[gd_scene load_steps=2 format=3 uid="uid://tj5ds5rxwv2e"]

[ext_resource type="Script" uid="uid://b0046fd7sdq6d" path="res://scripts/ui/debug_hud.gd" id="1_3gunm"]

[node name="DebugHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3gunm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 241.0
offset_bottom = 135.0

[node name="TrashOnMapLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Trash on Map"

[node name="TrashCollectedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "TrashCollectedLabel"

[node name="SafeFromSharkLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SafeFromSharkLabel"

[node name="MicroPlasticMeter" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "MicroPlasticMeter"
